Predictive maintenance using Random Forest Algorithm

--- a/ManufacturingEquipmentFailure/predictivemaintenance.ipynb
+++ b/ManufacturingEquipmentFailure/predictivemaintenance.ipynb
@@ -5,7 +5,9 @@
    "metadata": {},
    "source": [
     "#### PREDICTIVE MAINTENANCE MODEL\n",
-    "A model that can be used to predict machinery failure"
+    "A model that can be used to predict machinery failure\n",
+    "\n",
+    "Github Link: https://github.com/KushDayv/Intro-to-ML-models/tree/master/ManufacturingEquipmentFailure"
    ]
   },
   {
